fixing font and safari wrap issue

--- a/static/css/wizard.css
+++ b/static/css/wizard.css
@@ -1,4 +1,3 @@
-@import url('http://fonts.googleapis.com/css?family=Cantora+One:400,400italic,700,700italic|PT+Sans|Oxygen+Mono');
 html {
   font-size: 16px;
 }
@@ -76,7 +75,7 @@ ol#post-list {
   list-style: none;
   padding: 0;
 }
-#content > div.row {
+div.summary {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
