--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -5,12 +5,6 @@
  * Date    : 2018-02-13
  */
 
-@import url('http://fonts.googleapis.com/css?family=Cantora+One:400,400italic,700,700italic|PT+Sans|Oxygen+Mono');
-/*
-@import url('http://fonts.googleapis.com/css?family=Oxygen+Mono:400');
-@import url('http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic');
-*/
-
 $main-bgcolor: white;
 $aux-color: white;
 $aux-bgcolor: #777;
@@ -161,15 +155,16 @@ ol#post-list {
   padding: 0;
 }
 
-#content {
-  >div.row {
+/*#content {
+  >*/
+div.summary {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     border-bottom: 1px solid $aux-border-color;
     margin-top: 1.5rem;
   }
-}
+/*}*/
 
 p.paginator {
   margin-top: 10px;
